--- a/src/app/gerenciar/marca/marca.component.html
+++ b/src/app/gerenciar/marca/marca.component.html
@@ -1,2 +1,2 @@
-<app-marca-cadastrar [marcaEditar]="marcaParaEditar"></app-marca-cadastrar>
-<app-marca-lista (marcaSelecionada)="marcaParaEditar = $event"></app-marca-lista>
+<app-marca-cadastrar></app-marca-cadastrar>
+<app-marca-lista></app-marca-lista>
