--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-menu></app-menu>
 <div class="jumbotron">
-  <div class="container">
+  <div class="container-fluid">
     <app-alerta></app-alerta>
     <app-marca></app-marca>
   </div>
