--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,19 +20,19 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownCadastro">
             <a class="dropdown-item" routerLink="/dominio">Dominios</a>
             <a class="dropdown-item" routerLink="/formasDePagamento">Formas de Pagamento</a>
-            <a class="dropdown-item" routerLink="/marca">Marca</a>
+            <a class="dropdown-item" routerLink="marca/cadastrar">Marca</a>
             <a class="dropdown-item" href="#">Produto</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownListar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Consultas
+            Listar
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownListar">
             <a class="dropdown-item" routerLink="/dominio-listar">Dominios</a>
             <a class="dropdown-item" routerLink="/">Produto</a>
             <a class="dropdown-item" routerLink="/">Medida</a>
-            <a class="dropdown-item" routerLink="/marca-listar">Marca</a>
+            <a class="dropdown-item" routerLink="/marca/listar">Marca</a>
             <a class="dropdown-item" routerLink="/">Fornecedor</a>
             <a class="dropdown-item" routerLink="/">Categoria</a>
             <a class="dropdown-item" routerLink="/">Sub Categoria</a>
