--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <app-header></app-header>
 <app-menu></app-menu>
 <div class="jumbotron">
-  <div class="container-fluid">
-    <app-alerta></app-alerta>
-    <app-marca></app-marca>
-  </div>
+    <div class="container-fluid">
+        <app-alerta></app-alerta>
+        <router-outlet></router-outlet>
+    </div>
 </div>
 <div class="text-center">
-  <p>
-  </p>
-  © 2019 Standard App Co.
-  <p>
-  </p>
+    <p>
+    </p>
+    © 2019 Standard App Co.
+    <p>
+    </p>
 </div>
 
