--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,6 +21,7 @@
             <a class="dropdown-item" routerLink="/dominio">Dominios</a>
             <a class="dropdown-item" routerLink="/formasDePagamento">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="marca/cadastrar">Marca</a>
+            <a class="dropdown-item" routerLink="medida/cadastrar">Medida</a>
             <a class="dropdown-item" href="#">Produto</a>
           </div>
         </li>
@@ -31,8 +32,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownListar">
             <a class="dropdown-item" routerLink="/dominio-listar">Dominios</a>
             <a class="dropdown-item" routerLink="/">Produto</a>
-            <a class="dropdown-item" routerLink="/">Medida</a>
-            <a class="dropdown-item" routerLink="/marca/listar">Marca</a>
+            <a class="dropdown-item" routerLink="medida/listar">Medida</a>
+            <a class="dropdown-item" routerLink="marca/listar">Marca</a>
             <a class="dropdown-item" routerLink="/">Fornecedor</a>
             <a class="dropdown-item" routerLink="/">Categoria</a>
             <a class="dropdown-item" routerLink="/">Sub Categoria</a>
