--- a/src/app/gerenciar/marca/marca-cadastrar/marca-cadastrar.component.html
+++ b/src/app/gerenciar/marca/marca-cadastrar/marca-cadastrar.component.html
@@ -27,8 +27,9 @@
             </div>
         </div>
         <div class="card-footer bg-transparent text-right">
-            <button *ngSwitchCase="true" type="button" class="btn btn-primary" (click)="onAlterar()">Alterar</button>
-            <button *ngSwitchCase="false" type="button" class="btn btn-primary" (click)="onCadastrar()">Cadastrar
+            <button *ngSwitchCase="true"  type="button" class="btn btn-secondary" (click)="onAlterar()">Alterar</button>
+            <button *ngSwitchCase="true"  type="button" class="btn btn-secondary ml-1" (click)="onExcluir(marcaForm.value)">Excluir</button>
+            <button *ngSwitchCase="false" type="button" class="btn btn-secondary" (click)="onCadastrar()">Cadastrar
             </button>
             <button type="button" class="btn btn-secondary ml-1" (click)="onCancelar()">Cancelar</button>
         </div>
