--- a/src/app/gerenciar/medida/medida-cadastrar/medida-cadastrar.component.html
+++ b/src/app/gerenciar/medida/medida-cadastrar/medida-cadastrar.component.html
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <div class="form-row">
                     <div class="col-md-8 mb-4">
-                        <label for="categoria">Categoria</label>
+                        <label for="categoria">Categoría</label>
                         <select class="form-control" formControlName="categoria"
                                 (change)="onChange($event.target.value)"
                                 [ngClass]="{ 'is-invalid': submitted && f.categoria.errors }">
