--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,6 +22,7 @@
             <a class="dropdown-item" routerLink="/formasDePagamento">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="marca/cadastrar">Marca</a>
             <a class="dropdown-item" routerLink="medida/cadastrar">Medida</a>
+            <a class="dropdown-item" routerLink="categoria/cadastrar">Categoria</a>
             <a class="dropdown-item" href="#">Produto</a>
           </div>
         </li>
@@ -35,7 +36,7 @@
             <a class="dropdown-item" routerLink="medida/listar">Medida</a>
             <a class="dropdown-item" routerLink="marca/listar">Marca</a>
             <a class="dropdown-item" routerLink="/">Fornecedor</a>
-            <a class="dropdown-item" routerLink="/">Categoria</a>
+            <a class="dropdown-item" routerLink="categoria/listar">Categoria</a>
             <a class="dropdown-item" routerLink="/">Sub Categoria</a>
             <a class="dropdown-item" routerLink="/">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="/">Vendas</a>
