--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,8 @@
             <a class="dropdown-item" routerLink="/formasDePagamento">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="marca/cadastrar">Marca</a>
             <a class="dropdown-item" routerLink="medida/cadastrar">Medida</a>
-            <a class="dropdown-item" routerLink="categoria/cadastrar">Categoria</a>
+            <a class="dropdown-item" routerLink="categoria/cadastrar">Categoría</a>
+            <a class="dropdown-item" routerLink="subcategoria/cadastrar">Subcategoría</a>
             <a class="dropdown-item" href="#">Produto</a>
           </div>
         </li>
@@ -36,8 +37,8 @@
             <a class="dropdown-item" routerLink="medida/listar">Medida</a>
             <a class="dropdown-item" routerLink="marca/listar">Marca</a>
             <a class="dropdown-item" routerLink="/">Fornecedor</a>
-            <a class="dropdown-item" routerLink="categoria/listar">Categoria</a>
-            <a class="dropdown-item" routerLink="/">Sub Categoria</a>
+            <a class="dropdown-item" routerLink="categoria/listar">Categoría</a>
+            <a class="dropdown-item" routerLink="subcategoria/listar">Subcategoría</a>
             <a class="dropdown-item" routerLink="/">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="/">Vendas</a>
             <a class="dropdown-item" routerLink="/">Retirada</a>
