--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,7 +19,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownCadastro">
             <a class="dropdown-item" routerLink="/dominio">Dominios</a>
-            <a class="dropdown-item" routerLink="/formasDePagamento">Formas de Pagamento</a>
+            <a class="dropdown-item" routerLink="formasdepagamento/cadastrar">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="marca/cadastrar">Marca</a>
             <a class="dropdown-item" routerLink="medida/cadastrar">Medida</a>
             <a class="dropdown-item" routerLink="categoria/cadastrar">Categoría</a>
@@ -39,7 +39,7 @@
             <a class="dropdown-item" routerLink="/">Fornecedor</a>
             <a class="dropdown-item" routerLink="categoria/listar">Categoría</a>
             <a class="dropdown-item" routerLink="subcategoria/listar">Subcategoría</a>
-            <a class="dropdown-item" routerLink="/">Formas de Pagamento</a>
+            <a class="dropdown-item" routerLink="formasdepagamento/listar">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="/">Vendas</a>
             <a class="dropdown-item" routerLink="/">Retirada</a>
             <a class="dropdown-item" routerLink="/">Dominios</a>
