--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,9 +18,10 @@
             Cadastros
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownCadastro">
-            <a class="dropdown-item" routerLink="/dominio">Dominios</a>
+            <a class="dropdown-item" routerLink="dominio/cadastrar">Dominios</a>
             <a class="dropdown-item" routerLink="formasdepagamento/cadastrar">Formas de Pagamento</a>
             <a class="dropdown-item" routerLink="marca/cadastrar">Marca</a>
+            <a class="dropdown-item" routerLink="fornecedor/cadastrar">Fornecedor</a>
             <a class="dropdown-item" routerLink="medida/cadastrar">Medida</a>
             <a class="dropdown-item" routerLink="categoria/cadastrar">Categoría</a>
             <a class="dropdown-item" routerLink="subcategoria/cadastrar">Subcategoría</a>
@@ -33,13 +34,13 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownListar">
             <a class="dropdown-item" routerLink="/dominio-listar">Dominios</a>
-            <a class="dropdown-item" routerLink="/">Produto</a>
             <a class="dropdown-item" routerLink="medida/listar">Medida</a>
             <a class="dropdown-item" routerLink="marca/listar">Marca</a>
-            <a class="dropdown-item" routerLink="/">Fornecedor</a>
+            <a class="dropdown-item" routerLink="fornecedor/listar">Fornecedor</a>
             <a class="dropdown-item" routerLink="categoria/listar">Categoría</a>
             <a class="dropdown-item" routerLink="subcategoria/listar">Subcategoría</a>
             <a class="dropdown-item" routerLink="formasdepagamento/listar">Formas de Pagamento</a>
+            <a class="dropdown-item" routerLink="/">Produto</a>
             <a class="dropdown-item" routerLink="/">Vendas</a>
             <a class="dropdown-item" routerLink="/">Retirada</a>
             <a class="dropdown-item" routerLink="/">Dominios</a>
@@ -49,9 +50,9 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownVenda" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Venda
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownVenda">
-            <a class="dropdown-item" href="#">Efetuar Venda</a>
-            <a class="dropdown-item" href="#">Cancelar venda</a>
+          <div class="dropdown-menu"            <a class="dropdown-item" href="#">Efetuar Venda</a>
+          <a class="dropdown-item" href="#">Cancelar venda</a>
+          aria-labelledby="navbarDropdownVenda">
           </div>
         </li>
         <li class="nav-item dropdown">
