--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -33,7 +33,7 @@
             Listar
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownListar">
-            <a class="dropdown-item" routerLink="/dominio-listar">Dominios</a>
+            <a class="dropdown-item" routerLink="dominio/listar">Dominios</a>
             <a class="dropdown-item" routerLink="medida/listar">Medida</a>
             <a class="dropdown-item" routerLink="marca/listar">Marca</a>
             <a class="dropdown-item" routerLink="fornecedor/listar">Fornecedor</a>
@@ -50,9 +50,9 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownVenda" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Venda
           </a>
-          <div class="dropdown-menu"            <a class="dropdown-item" href="#">Efetuar Venda</a>
-          <a class="dropdown-item" href="#">Cancelar venda</a>
-          aria-labelledby="navbarDropdownVenda">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownVenda">
+            <a class="dropdown-item" href="#">Efetuar Venda</a>
+            <a class="dropdown-item" href="#">Cancelar venda</a>
           </div>
         </li>
         <li class="nav-item dropdown">
