--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,7 +25,7 @@
             <a class="dropdown-item" routerLink="medida/cadastrar">Medida</a>
             <a class="dropdown-item" routerLink="categoria/cadastrar">Categoría</a>
             <a class="dropdown-item" routerLink="subcategoria/cadastrar">Subcategoría</a>
-            <a class="dropdown-item" href="#">Produto</a>
+            <a class="dropdown-item" routerLink="produto/cadastrar">Produto</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -40,7 +40,7 @@
             <a class="dropdown-item" routerLink="categoria/listar">Categoría</a>
             <a class="dropdown-item" routerLink="subcategoria/listar">Subcategoría</a>
             <a class="dropdown-item" routerLink="formasdepagamento/listar">Formas de Pagamento</a>
-            <a class="dropdown-item" routerLink="/">Produto</a>
+            <a class="dropdown-item" routerLink="produto/listar">Produto</a>
             <a class="dropdown-item" routerLink="/">Vendas</a>
             <a class="dropdown-item" routerLink="/">Retirada</a>
             <a class="dropdown-item" routerLink="/">Dominios</a>
